   * new images: Konrad level 1, Tentacle of the Deep
   * new death animations: Initiate, Mage, Pikeman, Red Mage, White Mage,
     Tentacle of the Deep
   * removed deprecated death animation: Drake Fighter
   * new tiles: swamp, cave wall, paved road, variable-width canyon (#8817)
   * new villages: snow (human & elven), underground
   * updated snow hills and hills
   * new mountains
 * language and i18n:
   * added support for right-to-left languages (patch #470)
   * made the list of languages configurable via the locale WML
   * new manual: Chinese; updated manual: English, German, Swedish
   * updated man pages: Swedish
   * new translations: Hebrew, Portugese
   * updated translations: Afrikaans, British English, Chinese, Czech, French,
     German, Hungarian, Italian, Japanese, Polish, Portuguese (Brazil), Russian,
     Slovak, Slovenian, Spanish, Swedish, Turkish
   * tutorial now has its own textdomain
   * fixed Undead used as both trait and race name (#4295)
   * fixed loading non-binary savegame displaying messages in English (#4454)
   * fixed misleading description of Steadfast (#4315)
   * help changes
     * updated description of backstab to match the new functionality
     * updated description of Berserk to mention the 30 round limit
     * updated description of movement
     * added brief description of Shroud and Fog of War
   * updated in game help and tip of the day to reflect latest slow changes
 * music and sound:
   * new main menu music
 * gameplay changes:
   * backstab now works if opposite unit is non-incapacitated enemy of defender
   * prevented stoned units from being healed
   * slow does not remove an attack anymore
   * slow still temporarily doubles movement cost
   * slowed units see the damage they deal halved immediately
   * unit modifications now round toward original value instead of truncating
   * changed resilient trait bonus from +7hp to +10%+3hp
   * decreased strong trait hitpoints bonus from 2 to 1