@@ -92,6 +92,8 @@ SVN trunk (1.1.x):
    * new villages: snow (human & elven), underground
    * updated snow hills and hills
    * new mountains
+   * bilinear interpolation of images (better interpolation at high zoom
+   level)
  * language and i18n:
    * added support for right-to-left languages (patch #470)
    * made the list of languages configurable via the locale WML
